//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

8th May 2017 Michal Kreps
    Fix bug in EvtbTosllVectorAmp to recognise Bs --> K*bar mu mu decay as
    b --> d ll transition. 

8th May 2017 Michal Kreps
    Significantly simplify way how we decide on decay mode and daughters
    ordering in DDalitz model. With new code by definition all orderings of
    daughters in the decay file will yield same output.

4th May 2017 John Back
    Further fixes to DDalitz particle ordering (including charge-conjugates):
    Mode 5:  D0 -> K- K0bar K+ and K+ K- K0bar
    Mode 12: D0 -> pi0 pi- pi+ and pi+ pi0 pi-
    Removed unneeded index ordering checks for mode 10 (D+ -> pi- pi+ pi+)
    and mode 11 (Ds+ -> pi- pi+ pi+)

27th April 2017 John Back
    Fixed DDalitz particle ordering for mode 7: D+ -> pi+ K- K+ and K+ pi+ K-
    and their charge-conjugates

7th April 2017 John Back
    Modified EvtGenExternal/EvtPythiaEngine to ensure that the EvtGen-based
    instances of Pythia8 (for generic and alias decays) use the same
    particle properties as defined by EvtGen, courtesy Patrick Robbe (LHCb).

5th April 2017 Michal Kreps
    Fixed indexing in copy constructor of Evt3Rank3C, which would otherwise
    produce an infinite loop; bug report from David Grellscheid.

3rd November 2016 John Back
    Modified EvtFlatQ2 model to work for all B -> X lepton lepton modes, as
    well as adding an extra phase space factor to correct for the dip at low
    q^2, courtesy of Marcin Chrzaszcz & Thomas Blake (LHCb), which is enabled
    by using "FLATQ2 1" instead of just "FLATQ2" in the decay file.

13th October 2016 John Back
    Added the TauolaCurrentOption decfile keyword to select the hadronic 
    current in Tauola; default is the BaBar-tuned current option (int = 1).
    EvtParticles can store double attributes using the functions 